snippets/Nemerle.Statechart/Tests/testsuite/positive/event_list.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
using System.Threading;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  name "event list";
  //flags debug;

  state A
  {
    a, after (1 s) => B;
  }
  
  state B
  {
    a => A;
  }
  
  #>)]
public class example
{

}

module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("A", "EntryA");
    tester.Test("a", "B", "ExitA", "EntryB");
    tester.TestWait("a", 1300, "B", "ExitB", "EntryA", "ExitA", "EntryB");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
[B]
Ok
Processing a 'a' 
ExitB
EntryA
ExitA
EntryB
[B]
Ok
END-OUTPUT
*/
