snippets/Nemerle.Statechart/Tests/testsuite/negative/duplicate_timed_event.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#

  name "timed event conflict";
  
  state A
  {
    after (1.5 s) => B; // E: Duplicate transition "TransitionAToBByafter\(00:00:01.5000000\)"
    after (1.5 s) => C; // E: Duplicate transition "TransitionAToCByafter\(00:00:01.5000000\)"
  }
  
  state B // W: State "B" is not used in fsm life history
  {
  }
   
  state C // W: State "C" is not used in fsm life history
  {
  }
  #>)]
  public class example
  {
  }

